force-app/main/default/objects/Team__c/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <label>Away Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>