force-app/main/default/objects/Team__c/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <label>Home Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>