force-app/main/default/objects/Team__c/fields/Score_Away__c.field-meta.xml
<CustomField>
    <fullName>Score_Away__c</fullName>
    <label>Score Away</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>