force-app/main/default/objects/Team__c/fields/Score_Home__c.field-meta.xml
<CustomField>
    <fullName>Score_Home__c</fullName>
    <label>Score Home</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>