force-app/main/default/objects/Team__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LIVE</fullName>
            </value>
            <value>
                <fullName>FINISHED</fullName>
            </value>
            <value>
                <fullName>SHEDULED</fullName>
            </value>
            <value>
                <fullName>1H</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>2H</fullName>
            </value>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>AET</fullName>
            </value>
            <value>
                <fullName>PEN</fullName>
            </value>
            <value>
                <fullName>SUSP</fullName>
            </value>
            <value>
                <fullName>CANC</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>